cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_185.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/a_time.c:128: error: DEAD_STORE
  The value written to &i (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/a_time.c:128:13: Write of unused value
126.       for (i = 0; i < end; i++) {
127.           if (!strict && (i == btz) && ((a[o] == upper_z) || (a[o] == plus) || (a[o] == minus))) {
128.               i++;
                   ^
129.               break;
130.           }
